--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <img src="/uploads/2020/12/fireworks-2731725_1920_0_1607673819.jpg" width="500px"/>
             <h2 id="price">Наши фейерверки</h2>
             <p>
-                <p><img src="/uploads/2020/12/%D1%85%D0%BB%D0%BE%D0%BF%D1%83%D1%88%D0%BA%D0%B0_0_1607673818.svg" width="70px"/><br/>Хлопушки</p>
+                <p><img src="https://backoffice.algoritmika.org/task-preview/uploads/2020/12/%D1%85%D0%BB%D0%BE%D0%BF%D1%83%D1%88%D0%BA%D0%B0_0_1607673818.svg" width="70px"/><br/>Хлопушки</p>
                 <p><img src="/uploads/2020/12/%D0%BF%D0%B5%D1%82%D0%B0%D1%80%D0%B4%D0%B0_0_1607673817.svg" width="70px"/><br/>Петарды</p>
                 <p><img src="/uploads/2020/12/%D1%84%D0%BE%D0%BD%D1%82%D0%B0%D0%BD_0_1607673817.svg" width="70px"/><br/>Фонтаны</p>
                 <p><img src="/uploads/2020/12/%D1%88%D0%B0%D1%80_0_1607673818.svg" width="70px"/><br/>Фестивальные шары</p>
