--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <header>
             <img id ="logo" src="/uploads/2020/12/logo_0_1607675596.svg" height="40px"/>
             <b>Внимание! Сезонные скидки 40% </b><a href="#discount">Подробнее</a>
-          <link rel="styleshhet" href="style.css">
+          <link rel="stylesheet" href="style.css">
         </header>
         <main>
             <nav>
